//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Post {
  id Int [pk, increment]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  targetedKeyword Keyword
  targetedKeywordId Int [unique]
  relatedKeywords Keyword [not null]
  url Url
}

Table Keyword {
  id Int [pk, increment]
  keyword String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  kpis KeywordKPIs [not null]
  post Post
  posts Post [not null]
}

Table KeywordKPIs {
  id Int [pk, increment]
  keyword Keyword [not null]
  keywordId Int [not null]
  intent String
  volume Int
  difficulty Float
  cpc Float
  SERP String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Url {
  id Int [pk, increment]
  url String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  post Post [not null]
  postId Int [unique, not null]
}

Table gsc_data {
  id Int [pk, increment]
  keyword String [not null]
  clicks Int [not null]
  impressions Int [not null]
  position Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table gsc_request {
  id Int [pk, increment]
  kpis gsc_kpis [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table gsc_kpis {
  id Int [pk, increment]
  clicks Int [not null]
  impressions Int [not null]
  position Float [not null]
  ctr Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  gsc_request gsc_request
  searchConsoleRequestId Int
}

Table relatedKeywords {
  relatedkeywordsId Int [ref: > Keyword.id]
  postsId Int [ref: > Post.id]
}

Ref: Post.targetedKeywordId - Keyword.id

Ref: KeywordKPIs.keywordId > Keyword.id

Ref: Url.postId - Post.id

Ref: gsc_kpis.searchConsoleRequestId > gsc_request.id